# model_training_v1

./: .gitignore  Dockerfile  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
config/: base_config.yaml
config/environments/: dev.yaml  prod.yaml  qa.yaml
config/jobs/: catalog_gap_analysis.yaml  price_prediction.yaml  training.yaml
config/model_configs/: lightgbm_params.yaml  xgboost_params.yaml
config/pipelines/: batch_training_flow.yaml  hyperparameter_tuning.yaml
database/: config_store.db
src/: mlflow.db  train_launcher.py
src/bootstrap/: train_config_loader.py  train_context.py
src/data/: competitor_pricing.json  ga4_events.json  inventory.xlsx  price.csv  purchased_order.xlsx  sku.csv
src/data/second_usecase/: catalog_gap_training_data.xlsx
src/orchestration/: experiment_tracker.py  model_metadata_store.py  retry_handler.py
src/pipeline/: model_registry_app.py  price_executor.py  train_executor.py
src/processors/base/: train_base_stage.py
src/processors/common/evaluation/: classification_eval.py  custom_metrics.py  regression_eval.py  schema_validator.py
src/processors/custom/: ai_engine.py  champion_challenger_engine.py  hybrid_engine.py  inference.py  rule_engine.py
src/routes/: routes.py
src/schemas/: schemas.py
src/service/: ai_optimizer.py  feature_store_service.py  inference.py  model_service.py  prediction_service.py
src/utils/: constants.py  db.py  delta_writer.py  json_sanitizer.py  logger.py  mlflow_connector.py  model_utils.py  output_writer.py  run_metadata.py  spark_builder.py
(+27 files in other folders)
