[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark==3.2.0",
    "deltalake>=1.5.0",
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas==2.1.4",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "pyspark==3.5.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ray[tune]>=2.54.1",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
    "xgboost>=3.2.0",
]
